Fixing wrapping issue with nutupane details.

--- a/app/assets/stylesheets/widgets/nutupane.scss
+++ b/app/assets/stylesheets/widgets/nutupane.scss
@@ -85,6 +85,7 @@ th:hover {
   background: white;
   border: 1px solid #CCC;
   border-radius: 5px 5px 0 0;
+  @include box-sizing(border-box);
 
   header {
     height: 50px;
